show filters on mobile; other bug fixes

--- a/skin/frontend/base/default/css/FME/fme_layered_nav.css
+++ b/skin/frontend/base/default/css/FME/fme_layered_nav.css
@@ -40,9 +40,7 @@ div.price_slider div.handle { top:3px; width:14px; height:23px; background: tran
     top:0;
     left:0;
 }
-.block-layered-nav .block-subtitle {
-    display: none;
-}
+
 .price-container {
     width: 99%;
     
@@ -89,6 +87,7 @@ div.price_slider div.handle { top:3px; width:14px; height:23px; background: tran
     margin-bottom: 0;
     font-weight: 800;
 }
+
 div.fme-filter dd {
     padding: 2px 2px 25px;
     border-bottom: solid 1px #E0E0E0;
@@ -227,7 +226,7 @@ div.fme-filter dd a { font-family:Arial; font-size:12px; color:#333; text-decora
 .color .fme_layered_attribute_selected .color_box {
     border: 2px solid black;
 }
-.checkboxattributewrapper{display: inline-block}
+.checkboxattributewrapper{display: inline-block;line-height:28px;}
 .checkboxattribute {display:none;}
 .checkboxattribute + label {
     border: 1px solid #333;
@@ -251,3 +250,33 @@ div.fme-filter div.fme_layered_clear {
 div.fme-filter a.adj-nav-pad1, div.fme-filter span.adj-nav-pad1 {padding-left:0px;}
 div.fme-filter a.adj-nav-pad2, div.fme-filter span.adj-nav-pad2 {padding-left:10px;}
 div.fme-filter a.adj-nav-pad3, div.fme-filter span.adj-nav-pad3 {padding-left:20px;}
+
+.block-layered-nav .block-subtitle--filter {    font-family: Arial, Helvetica, sans-serif;}
+.fme_layered_clear_all_mobile {display:none;}
+@media (max-width: 768px) {
+    #fme_filters_list{
+        margin-left:25px;
+    }
+    div.fme-filter dd {
+        padding: 0 0 10px 0;
+        border-bottom: solid 1px #E0E0E0;
+        margin:0;
+        display: none;
+    }
+
+    div.fme-filter dd.showfilters{
+        display: block;   
+    }
+
+    .fme_layered_clear_all{display: none}
+    .fme_layered_clear_all_mobile {
+        display: block;
+        float: right;
+        font-size: 0.5em;
+        vertical-align: text-top;
+        line-height: 30px;
+    }
+    .block-layered-nav .block-subtitle--filter{
+        padding-right: 0;
+    }
+}
